force-app/main/default/Objects/Course__c/Course__c.object-meta.xml
<CustomObject>
    <description>A structured program of study or training that covers a specific subject or set of skills.</description>
    <label>Course</label>
    <nameField>
        <label>Course ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>