force-app/main/default/Objects/Course__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Indicates current state of the course&apos;s approval.  Only has a value if course was submitted for approval.  Then is begins in pending and never changes unless approved.</description>
    <inlineHelpText>Indicates current state of the course&apos;s approval.  Only has a value if course was submitted for approval.  Then is begins in pending and never changes unless approved.</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>