force-app/main/default/Objects/Course__c/fields/Artifacts_List__c.field-meta.xml
<CustomField>
    <fullName>Artifacts_List__c</fullName>
    <description>List of artifacts to be included in this course.  Links to each artifact will be added as they are completed</description>
    <inlineHelpText>List of artifacts to be included in this course.  Links to each artifact will be added as they are completed</inlineHelpText>
    <label>Artifacts List</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>