force-app/main/default/Objects/Course__c/fields/Canva_Course_Folder__c.field-meta.xml
<CustomField>
    <fullName>Canva_Course_Folder__c</fullName>
    <description>Link in Canva to this course&apos;s folder where videos and other resources are stored</description>
    <inlineHelpText>Link in Canva to this course&apos;s folder where videos and other resources are stored</inlineHelpText>
    <label>Canva Course Folder</label>
    <type>Url</type>
</CustomField>