force-app/main/default/Objects/Course__c/fields/Collaboration_Channels__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Channels__c</fullName>
    <description>All the collaboration channels (slack, MS Teams, ...) related to the course</description>
    <inlineHelpText>All the collaboration channels (slack, MS Teams, ...) related to the course</inlineHelpText>
    <label>Collaboration Channels</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>