force-app/main/default/Objects/Course__c/fields/Course_Reference_Link__c.field-meta.xml
<CustomField>
    <fullName>Course_Reference_Link__c</fullName>
    <description>Link to folder for this course</description>
    <inlineHelpText>Link to folder for this course</inlineHelpText>
    <label>Reference Link</label>
    <type>Url</type>
</CustomField>