force-app/main/default/Objects/Course__c/fields/Course_Title__c.field-meta.xml
<CustomField>
    <fullName>Course_Title__c</fullName>
    <description>Reference name of the course</description>
    <inlineHelpText>Reference name of the course</inlineHelpText>
    <label>Course Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>