force-app/main/default/Objects/Course__c/fields/Estimated_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_End_Date__c</fullName>
    <description>Date work on creating course is expected to be completed</description>
    <inlineHelpText>Date work on creating course is expected to be completed</inlineHelpText>
    <label>Estimated End Date</label>
    <type>Date</type>
</CustomField>