force-app/main/default/Objects/Course__c/fields/Estimated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Start_Date__c</fullName>
    <description>Date work on creating course is expected to begin</description>
    <inlineHelpText>Date work on creating course is expected to begin</inlineHelpText>
    <label>Estimated Start Date</label>
    <type>Date</type>
</CustomField>