force-app/main/default/Objects/Course__c/fields/Google_Drive_Folder__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Folder__c</fullName>
    <description>Link to folder in google drive for this course</description>
    <inlineHelpText>Link to folder in google drive for this course</inlineHelpText>
    <label>Google Drive Folder</label>
    <type>Url</type>
</CustomField>