force-app/main/default/Objects/Course__c/fields/Learning_Goals__c.field-meta.xml
<CustomField>
    <fullName>Learning_Goals__c</fullName>
    <description>What the learners are expected to know or do by the end.</description>
    <inlineHelpText>What the learners are expected to know or do by the end.</inlineHelpText>
    <label>Learning Goals</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>