force-app/main/default/Objects/Course__c/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <description>General description of the course.</description>
    <inlineHelpText>General description of the course.</inlineHelpText>
    <label>Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>