force-app/main/default/Objects/Course__c/fields/Structure__c.field-meta.xml
<CustomField>
    <fullName>Structure__c</fullName>
    <description>What components make up the course?</description>
    <inlineHelpText>What components make up the course?</inlineHelpText>
    <label>Structure</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>