force-app/main/default/Objects/Course__c/fields/Total_Modules__c.field-meta.xml
<CustomField>
    <fullName>Total_Modules__c</fullName>
    <description>Number of course modules associated to the course</description>
    <inlineHelpText>Number of course modules associated to the course</inlineHelpText>
    <label>Total Modules</label>
    <summaryForeignKey>Course_Module__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>