force-app/main/default/Objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Total_Modules__c</columns>
    <columns>Estimated_Start_Date__c</columns>
    <columns>Estimated_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>