force-app/main/default/Objects/Course__c/listViews/CoursesInProgress.listView-meta.xml
<ListView>
    <fullName>CoursesInProgress</fullName>
    <columns>NAME</columns>
    <columns>Course_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Course_Reference_Link__c</columns>
    <columns>Estimated_Start_Date__c</columns>
    <columns>Estimated_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Discovery,In Progress,In Review</value>
    </filters>
    <label>Courses In Progress</label>
</ListView>