force-app/main/default/Objects/Course__c/listViews/ExplorersTrailCourses.listView-meta.xml
<ListView>
    <fullName>ExplorersTrailCourses</fullName>
    <columns>NAME</columns>
    <columns>Course_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>includes</operation>
        <value>The Explorers Trail</value>
    </filters>
    <label>Explorers Trail Courses</label>
</ListView>