force-app/main/default/Objects/Course__c/listViews/TheNonproftDigitalCompassCourses.listView-meta.xml
<ListView>
    <fullName>TheNonproftDigitalCompassCourses</fullName>
    <columns>NAME</columns>
    <columns>Course_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>includes</operation>
        <value>The Nonprofit Digital Compass</value>
    </filters>
    <label>The Nonprofit Digital Compass Courses</label>
</ListView>