force-app/main/default/Objects/Course__c/listViews/VisitorsTrailCourses.listView-meta.xml
<ListView>
    <fullName>VisitorsTrailCourses</fullName>
    <columns>NAME</columns>
    <columns>Course_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>The Visitors&apos; Trail</value>
    </filters>
    <label>Visitors Trail Courses</label>
</ListView>